Feito parte de requisição de vídeos. Adicionado banco de dados aos arquivos do projeto.

--- a/rangel-videos-front/src/index.html
+++ b/rangel-videos-front/src/index.html
@@ -11,7 +11,7 @@
     <div id="app">
 
       <!-- Header -->
-      <div class="border-solid border-4 border-black flex flex-1 place-content-between px-2 py-1 text-lg items-center">
+      <div class="border-solid border-b-4 border-black flex flex-1 place-content-between px-2 py-1 text-lg items-center">
         <a>rangel-videos</a>
         <div class="flex items-center gap-2 ">
           <div class="border-solid border-black border-l-2 h-8"></div>
@@ -22,16 +22,7 @@
       <span class="flex justify-center my-6"><a class="text-4xl"> Vídeos </a></span>
 
         <!-- Vídeos -->
-        <div class="flex justify-center items-center mx-4 gap-24 flex-wrap">
-
-          <!-- Vídeo -->
-          <div class="border-solid border-2 border-black rounded-lg flex-grow-1">
-            <img class="w-[340px] h-[200px]" src="/teste.jpg" width="280" height="200">
-            <div class="p-2">
-              <a>Nome do vídeo</a><br>
-              <a>Descrição do vídeo</a>
-            </div>
-          </div>
+        <div class="flex justify-center items-center mx-4 gap-24 flex-wrap" id="videos">
 
           <script src="js/fetch-videos.js"></script>
 
