--- a/rangel-videos-front/src/index.html
+++ b/rangel-videos-front/src/index.html
@@ -2,21 +2,19 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link href="./index.css" rel="stylesheet">
+    <link href="./css/index.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/rangel-videos.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rangel Games</title>
+    <title>rangel-videos</title>
   </head>
   <body>
     <div id="app">
 
       <!-- Header -->
-      <div class="border-solid border-b-4 border-black flex flex-1 place-content-between px-2 py-1 text-lg items-center">
-        <a>rangel-videos</a>
-        <div class="flex items-center gap-2 ">
-          <div class="border-solid border-black border-l-2 h-8"></div>
-          <a class="bg-lime-500 border-solid border-2 border-black rounded-md p-1 hover:cursor-pointer">Upload</a>
-        </div>
+      <div id="header">
+
+        <script src="components/header.js"></script>
+
       </div>
 
       <span class="flex justify-center my-6"><a class="text-4xl"> Vídeos </a></span>
