Feito parte de upload de vídeos.

--- a/rangel-videos-front/src/index.html
+++ b/rangel-videos-front/src/index.html
@@ -20,7 +20,7 @@
       <span class="flex justify-center my-6"><a class="text-4xl"> Vídeos </a></span>
 
         <!-- Vídeos -->
-        <div class="flex justify-center items-center mx-4 gap-24 flex-wrap" id="videos">
+        <div class="flex justify-center items-center my-4 gap-24 flex-wrap" id="videos">
 
           <script src="js/fetch-videos.js"></script>
 
